refact : remove setter in dtos