@@ -1,50 +1,59 @@
 package travelfeeldog.review.dto;
 
 import java.util.List;
-import java.util.stream.Collectors;
 import lombok.Data;
+import lombok.Getter;
 import travelfeeldog.review.domain.keyword.model.BadKeyWord;
 import travelfeeldog.review.domain.keyword.model.GoodKeyWord;
 
 public class KeyWordDtos {
-    @Data
-    public static class KeyWordResponseDto{
-        private String categoryName;
-        private String keyWordName;
-        public KeyWordResponseDto(GoodKeyWord goodKeyWord){
-                this.keyWordName = goodKeyWord.getKeyWordName();
-                this.categoryName = goodKeyWord.getCategory().getName();
+    @Getter
+    public static class KeyWordResponseDto {
+        private final String categoryName;
+        private final String keyWordName;
+
+        public KeyWordResponseDto(final GoodKeyWord goodKeyWord) {
+            this.keyWordName = goodKeyWord.getKeyWordName();
+            this.categoryName = goodKeyWord.getCategory().getName();
         }
-        public KeyWordResponseDto(BadKeyWord badKeyWord){
-                this.keyWordName = badKeyWord.getKeyWordName();
-                this.categoryName = badKeyWord.getCategory().getName();
+
+        public KeyWordResponseDto(final BadKeyWord badKeyWord) {
+            this.keyWordName = badKeyWord.getKeyWordName();
+            this.categoryName = badKeyWord.getCategory().getName();
         }
     }
-    @Data
+
+    @Getter
     public static class GoodKeyWordResponseDto {
-        private Long goodKeyWordId;
-        private String goodKeyWordName;
-        public GoodKeyWordResponseDto(GoodKeyWord goodKeyWord){
-            this.goodKeyWordId =goodKeyWord.getId();
+        private final Long goodKeyWordId;
+        private final String goodKeyWordName;
+
+        public GoodKeyWordResponseDto(final GoodKeyWord goodKeyWord) {
+            this.goodKeyWordId = goodKeyWord.getId();
             this.goodKeyWordName = goodKeyWord.getKeyWordName();
         }
     }
+
+    @Getter
     @Data
     public static class BadKeyWordResponseDto {
-        private Long badKeyWordId;
-        private String badKeyWordName;
-        public BadKeyWordResponseDto(BadKeyWord badKeyWord){
+        private final Long badKeyWordId;
+        private final String badKeyWordName;
+
+        public BadKeyWordResponseDto(final BadKeyWord badKeyWord) {
             this.badKeyWordId = badKeyWord.getId();
             this.badKeyWordName = badKeyWord.getKeyWordName();
         }
     }
-    @Data
-    public static class KeyWordResponseByCategoryDto{
-        private List<GoodKeyWordResponseDto> goodKeyWords;
-        private List<BadKeyWordResponseDto> badKeyWords;
-        public KeyWordResponseByCategoryDto(List<GoodKeyWord> goodKeyWords ,List<BadKeyWord> badKeyWords){
-            this.goodKeyWords = goodKeyWords.stream().map(GoodKeyWordResponseDto::new).collect(Collectors.toList());
-            this.badKeyWords = badKeyWords.stream().map(BadKeyWordResponseDto::new).collect(Collectors.toList());
+
+    @Getter
+    public static class KeyWordResponseByCategoryDto {
+        private final List<GoodKeyWordResponseDto> goodKeyWords;
+        private final List<BadKeyWordResponseDto> badKeyWords;
+
+        public KeyWordResponseByCategoryDto(final List<GoodKeyWord> goodKeyWords, final List<BadKeyWord> badKeyWords) {
+            this.goodKeyWords = goodKeyWords.stream().map(GoodKeyWordResponseDto::new).toList();
+            this.badKeyWords = badKeyWords.stream().map(BadKeyWordResponseDto::new).toList();
         }
     }
 }
